<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:fontFamily="@font/lobster"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/dimen_18sp" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="@dimen/dimen_1dp">

        <Button
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_weight=".5"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/refresh"
            android:textColor="@color/refreshTextColor" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll" />

    <TextView
        android:id="@+id/empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_rem_nearby"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/dimen_18sp"
        android:visibility="gone" />


</RelativeLayout>