<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_2dp"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_8dp">

    <ImageButton
        android:id="@+id/reorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/reorder"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="@id/edit_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_point"
        app:srcCompat="@drawable/ic_reorder" />

    <EditText
        android:id="@+id/edit_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/note_point"
        android:imeOptions="actionDone"
        android:maxLength="150"
        android:maxLines="3"
        android:paddingEnd="@dimen/dimen_8dp"
        android:paddingStart="@dimen/dimen_16dp"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toEndOf="@id/reorder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:contentDescription="@string/delete"
        android:background="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="@+id/edit_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />
</android.support.constraint.ConstraintLayout>