<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:fitsSystemWindows="true"
    tools:context=".view.ui.activity.ChatActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_chat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layoutDirection="ltr"
            android:background="?colorPrimary">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:contentDescription="@string/back_key_pressed"
                    android:background="@drawable/ripple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:contentDescription="@string/name_initials"
                    android:src="@color/colorAccent"
                    app:civ_border_color="@color/civBorderColor"
                    app:civ_border_width="@dimen/dimen_1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/initials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:fontFamily="@font/semi_bold"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                    app:layout_constraintEnd_toEndOf="@+id/profile_pic"
                    app:layout_constraintStart_toStartOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="@+id/profile_pic"
                    tools:text="AS" />

                <TextView
                    android:id="@+id/chat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:textColor="@color/colorMainBackground1"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="@+id/profile_pic"
                    tools:text="@string/app_name" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_options"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            android:layoutDirection="ltr"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/backOnLongClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:contentDescription="@string/back_button_onlongclick"
                android:background="@drawable/ripple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/cardCounter"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backOnLongClick"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:background="#f5f5f5" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view"
            android:layout_marginBottom="@dimen/dimen_2dp"
            android:layoutAnimation="@anim/layout_animation_from_bottom" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/add_new_rem"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:srcCompat="@drawable/ic_edit" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im1"
                android:layout_width="@dimen/dimen_120dp"
                android:layout_height="@dimen/dimen_120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_chat"
                android:contentDescription="@string/empty_chat_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/no_recent_rem"
                android:textColor="@color/noremColor"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im1" />
        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
